# XKeen-UI

./: .gitignore  .prettierrc  Cargo.toml  README.md  Thumbs.db  config.json  go.mod  go.sum  guiLog.js  guiRouting.js  index.html  install.sh  main.go  main.js  outboundGenerator.html  outboundParser.js  remove.sh  script.js  setup.sh  style.css  version.js
.github/: changelog.hbs  changelog.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-go.yml  build-rust.yml  build.yml  outboundGenerator.yml  wiki.yml
backend/: Cargo.toml  Cross.toml  build.rs  rustfmt.toml
backend/.cargo/: config.toml
backend/src/: api_relay.rs  auth.rs  backuper.rs  clash.rs  configs.rs  controller.rs  devices.rs  frontend_embedder.rs  geo.rs  logger.rs  logs.rs  main.rs  rule_content.rs  ruleset_inspector.rs  settings.rs  static_embed.rs  types.rs  updater.rs  version.rs  websocket.rs
cgi-bin/: config.py  configs.py  configs.sh  control.py  control.sh  logs.py  logs.sh  status.py  status.sh
frontend/: .oxfmtrc.json  .prettierrc  components.json  eslint.config.js  index.html  outboundGenerator.html  package-lock.json  package.json  pnpm-lock.yaml  react-doctor.config.json  tsconfig.json  vite.config.ts
frontend/assets/: guiLog.js  guiRouting.js  main.js  outboundParser.js  style.css  version.js
frontend/src/: App.tsx  globals.css  index.css  main.tsx  monaco.d.ts  store.ts  types.ts
frontend/src/components/: ConfigPanel.tsx  GuiLog.tsx  GuiRouting.tsx  LogPanel.tsx  MonacoEditor.tsx  StatusBar.tsx  Toast.tsx  ToastContainer.tsx
frontend/src/components/auth/: Login.tsx
frontend/src/components/configuration/: CodeMirror.tsx  ConfigPanel.tsx  MonacoEditor.tsx
frontend/src/components/configuration/mihomo/: Connections.tsx  Selectors.tsx
frontend/src/components/configuration/xray/: GuiLog.tsx  GuiRouting.tsx
frontend/src/components/log/: LogPanel.tsx  WebSocket.ts
frontend/src/components/modals/: AddProxy.tsx  Backups.tsx  CommentsWarning.tsx  CommentsWarningModal.tsx  CoreManageModal.tsx  CoreManagement.tsx  DirtyModal.tsx  GeoScan.tsx  GeoScanModal.tsx  OutboundImportModal.tsx  Providers.tsx  Settings.tsx  SettingsModal.tsx  TemplateImportModal.tsx  Templates.tsx  Update.tsx  UpdateModal.tsx
frontend/src/components/status/: StatusBar.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aurora-text.tsx  badge.tsx  button-group.tsx  button.tsx  checkbox.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  input-group.tsx  input.tsx  item.tsx  label.tsx  popover.tsx  primitive-render.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  shine-border.tsx  skeleton.tsx  slider.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  loader.tsx  logBadges.ts  outboundParser.js  store.ts  theme.ts  types.ts  utils.ts  websocket.ts
frontend/src/modules/configuration/: ConfigPanel.tsx  MonacoEditor.tsx
frontend/src/modules/configuration/gui/: GuiLog.tsx  GuiRouting.tsx
frontend/src/modules/configuration/mihomo/: Connections.tsx  Selectors.tsx
frontend/src/modules/log/: LogPanel.tsx
frontend/src/modules/modals/: AddProxy.tsx  CommentsWarning.tsx  CoreManagement.tsx  GeoScan.tsx  Settings.tsx  Update.tsx
frontend/src/modules/status/: StatusBar.tsx
frontend/src/store/: index.tsx
src/: configs.rs  control.rs  controller.rs  logs.rs  main.rs  settings.rs  types.rs  updater.rs  version.rs  websocket.rs
tasks/: todo.md
wiki/: FAQ.md  Guide.md  Home.md  _Sidebar.md
