[package]
name = "xkeen-ui"
version = "0.5.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["fs", "cors"] }
nix = { version = "0.31", features = ["signal", "resource"] }
notify = "8"
chrono = "0.4"
regex = "1"
walkdir = "2"
once_cell = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = "7.2"
flate2 = "1.1"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
