[package]
name = "xkeen-ui"
version = "0.5.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1",  features = ["rt-multi-thread", "macros", "fs", "process", "sync", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
nix = { version = "0.31", features = ["signal", "resource"] }
notify = "8"
chrono = "0.4"
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
once_cell = "1"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = "7.3"
flate2 = "1.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
