[package]
name = "xkeen-ui"
version = "0.5.5"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1",  features = ["rt-multi-thread", "macros", "fs", "process", "sync", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
nix = { version = "0.31", default-features = false, features = ["signal", "process", "user", "resource"] }
rustix = { version = "1.1", features = ["fs"] }
notify = "8"
chrono = "0.4"
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }
once_cell = "1"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
zip = "8"
flate2 = "1.1"
tar = "0.4.44"
http = "1.4.0"
prost = "0.14"
ipnet = "2.11"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"