[package]
name = "xkeen-ui"
version = "0.6.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4"
flate2 = "1.1"
futures-util = "0.3"
http = "1.4.0"
ipnet = "2.11"
memmap2 = "0.9"
nix = { version = "0.31", default-features = false, features = ["signal", "process", "user", "resource"] }
notify = "8"
prost = "0.14"
regex-lite = "0.1.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustix = { version = "1.1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.44"
tokio = { version = "1",  features = ["rt-multi-thread", "macros", "fs", "process", "sync", "io-util", "net"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"